# pose_estimation_cube

./: .gitignore  CMakeLists.txt  stats.ods
data/poses/: poses.txt
data/views_/: view_1.pcd  view_11.pcd  view_12.pcd  view_14.pcd  view_15.pcd  view_16.pcd  view_20.pcd  view_22.pcd  view_23.pcd  view_26.pcd  view_30.pcd  view_31.pcd  view_32.pcd  view_33.pcd  view_39.pcd  view_4.pcd  view_41.pcd  view_42.pcd  view_5.pcd  view_8.pcd
models/: cube_1000.pcd  cube_handled.ply  cube_points_1000.ply  cube_points_1000_new.pcd  cube_points_1000_new.ply  cube_scaled_down.ply  scene_1.pcd  scene_1_seg.pcd  scene_1_seg.ply
pose_est_package/: CMakeLists.txt  CMakeLists_failed.txt  package.xml
pose_est_package/action/: PoseEstimation.action
pose_est_package/launch/: pose_est_client.launch  pose_est_server.launch
pose_est_package/src/: PoseEstimatorClass.cpp  PoseEstimatorClass.h  cameraClass.h  client.cpp  features.cpp  features.h  helper_functions.h  server.cpp
src/: PoseEstimatorClass.cpp  PoseEstimatorClass.h  cameraClass.cpp  cameraClass.h  client.cpp  config.h.in  features.cpp  features.h  generate_partial_views.cpp  global_pipeline.cpp  helper_functions.cpp  helper_functions.h  listener.cpp  local_recognition.cpp  main.cpp  registration.cpp  registration.h  server.cpp  stats.cpp  test_query.cpp  train.cpp  visualization.cpp  visualization.h
